--- a/wrap.html
+++ b/wrap.html
@@ -1,10 +1,10 @@
-html>
+<html>
 <head>
     <style>
        
         .container {
             display: flex;
-            flex-wrap: wrap;
+            flex-wrap:nowrap;
             gap: 20px;
             padding: 20px;
             height:400px;
